--- a/style.css
+++ b/style.css
@@ -1,8 +1,161 @@
-body .title {
-    text-align: center;
-    margin-top: 242px;
-    font-size: 60px;
+.navbar {
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgb(29, 25, 25);
+    padding: 10px 40px;
 }
-h2 {
-    text-align: center;  
+.logo {
+    font-size: 24px;
+    color: aliceblue;
+
+}
+.icon {
+    color:white;
+    list-style: none;
+    display:flex;
+}
+.icon li {
+    padding: 8px 12px;
+}
+.menu {
+    display: flex;
+    list-style: none;
+    padding-left: 0;
+}
+.menu li {
+    padding: 8px 12px;
+}
+.menu li:hover {
+    background-color :gainsboro;
+    border-radius: 4px;
+    color:black;
+}
+a {
+    text-decoration: none;
+    color:white;
+}
+body{
+    margin: 0;
+    font-family: "Source Sans Pro";
+    font-family: "Noto Sans KR";
+    
+}
+
+.introduce{
+    align-items: center;
+    display:flex;
+    align-items: center;
+    padding-top: 464px;
+    padding-left: 30px;
+    background-size: contain;
+    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQu97nVjwBujiJZ6jXJZOgoMDXEjBy0pdUi9w&usqp=CAU");
+
+    }
+.explain{
+    font-size: 42px;
+    color:aliceblue;
+}
+
+.toogle {
+    display:none;
+    position: absolute;
+    right: 32px;
+    font-size: 24px;
+    color: aliceblue;
+}
+.top_write {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    text-decoration: none;
+    justify-content: flex-start;
+    border-top: 30px;
+    margin-top: 200px;
+    margin-left: 200px;
+}
+.content1 {
+    display: block;
+    height: 250px;
+    width: 480px;
+    color:white;
+    background-image: url("https://lh3.googleusercontent.com/proxy/ptk0ox73jMbJOWA7QdRwxfEFD7JhXuzdgBZB71gp_Dy_NTyItQ7lvw6hmAavcc20Vc9zm1LvJLUD9JFUA79Wrxf30p3_23qic9PgPxHdmU5VZbFnANIyoNU1drI0PgbQ3-wkKprC2NtnMpsPkTqHvXyqi6FFKW5M_TD-aESmE2vCUe8sLEsk-w");
+    text-align: center;
+    padding-top: 100px;
+    padding-bottom: -100px;
+    font-size: 24px;
+}
+.content2 {
+    display: block;
+    height: 250px;
+    width: 480px;
+    color:white;
+    background-image: url("https://www.polinews.co.kr/data/photos/20200207/art_15815643276382_3c7422.jpg");
+    text-align: center;
+    padding-top: 100px;
+    font-size: 24px;
+    padding-bottom: -100px;
+}
+
+.content3 {
+    display: block;
+    height: 250px;
+    width: 480px;
+    color:white;
+    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT2V0njkOAmWvwAXYWDsDfk8rnR_UqwZ0u_Yw&usqp=CAU");
+    text-align: center;
+    padding-top: 100px;
+    font-size: 24px;
+    padding-bottom: -100px;
+}
+.type {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: baseline;
+    align-content: space-between;
+}
+.movie_type {
+    margin-top: 200px;
+    height: 100px;
+    width: 100px;
+    background-color:rgb(8, 8, 1);
+    border:3px solid;
+    text-align:center;
+    font-size: 24px;
+    color:aliceblue;
+
+}
+
+@media screen and (max-width: 833px) {
+    .navbar{
+        flex-direction: column;
+
+    }
+    .menu {
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+
+    }
+    .navbar_menu li{
+        width: 100%;
+        text-align: center;
+
+    }
+    .icon {
+        display: none;
+        justify-content: center;
+        padding: 8px 12px;
+    }
+    .toogle {
+        display: block;
+    }
+
+    .menu.active,
+    .icon.active {
+        display: flex;
+    }
 }
